--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "groq-chatbot",
+  "name": "groq-chatbot-backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "node-fetch": "^3.3.2"
   }
 }
+
